--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,10 @@
+behave==1.2.5
 dj-database-url==0.4.1
 Django==1.9.6
+enum34==1.1.6
 gunicorn==19.5.0
+parse==1.6.6
+parse-type==0.3.4
 psycopg2==2.6.1
+selenium==2.53.2
+six==1.10.0
